# mc_headless_auth

./: Cargo.toml  readme.md
examples/web_server/: Cargo.toml  index.html  readme.md
examples/web_server/src/: main.rs
src/: broadcast.rs  channel_message.rs  config.rs  error.rs  lib.rs  main.rs  message.rs  player.rs  server.rs  token.rs  user.rs
src/minecraft/: array.rs  auth.rs  encrypt.rs  handshake.rs  hash.rs  login_start.rs  mod.rs  optional.rs  packet.rs  server.rs  string.rs  uuid.rs  var_int.rs
src/minecraft/intents/: legacy_ping.rs  login.rs  mod.rs  status.rs  transfer.rs
